[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/themes/Theme_01_small.tres" type="Theme" id=1]
[ext_resource path="res://src/entities/ui/OptionsButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/entities/ui/CancelButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/entities/game_objects/PauseDialog.gd" type="Script" id=4]

[node name="PauseDialog" type="PopupDialog"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -221.0
margin_top = -97.0
margin_right = 221.0
margin_bottom = 97.0
theme = ExtResource( 1 )
popup_exclusive = true
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -176.5
margin_top = -97.5
margin_right = 176.5
margin_bottom = 97.5
alignment = 1
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_top = 40.0
margin_right = 353.0
margin_bottom = 61.0
text = "Game Paused"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResumeButton" type="Button" parent="VBoxContainer"]
margin_top = 65.0
margin_right = 353.0
margin_bottom = 92.0
text = "Resume"

[node name="OptionsButton" parent="VBoxContainer" instance=ExtResource( 2 )]
margin_top = 96.0
margin_right = 353.0
margin_bottom = 123.0

[node name="MainMenuButton" parent="VBoxContainer" instance=ExtResource( 3 )]
margin_left = 0.0
margin_top = 127.0
margin_right = 353.0
margin_bottom = 154.0
text = "Main Menu"
[connection signal="about_to_show" from="." to="." method="_on_PauseDialog_about_to_show"]
[connection signal="popup_hide" from="." to="." method="_on_PauseDialog_popup_hide"]
[connection signal="button_up" from="VBoxContainer/ResumeButton" to="." method="_on_ResumeButton_button_up"]
[connection signal="options_submitted" from="VBoxContainer/OptionsButton" to="." method="_on_OptionsButton_options_submitted"]
[connection signal="button_up" from="VBoxContainer/MainMenuButton" to="." method="_on_MainMenuButton_button_up"]
